# pzsp2-projekt

./: .gitignore  README.md  docker-compose.local.yml  docker-compose.prod.yml  main_doc.docx  package-lock.json  package.json
.github/workflows/: workflow.yml
backend/: .flake8  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini
backend/src/pzsp_backend/: app.py  dtos.py  models.py
backend/src/pzsp_backend/optimization/: base.py  constants.py  dijkstra.py
backend/src/pzsp_backend/optimization/integer/: abstract.py  model_demo.py  optimizer.py  util.py
backend/tests/: conftest.py  test_app.py  test_models.py  test_optimizer.py  util.py
cloud/ansible/: copy-src.yaml  full-deployment.yaml  install-docker.yaml  inventory.ini  redeploy.yml  test-connection.yaml  users.yaml
cloud/nginx/: nginx.conf
cloud/terraform/: main.tf  terraform.tfvars  variables.tf
docs/: UI-UX.md  admin-helpbook.md  architecture.md  business-and-user-requirements.md  local-development.md  main_doc.docx  master.md  preliminary-docs.md  production deployment.md  przypadki-uzycia.md
docs/diagrams/: backend-models.drawio  backend-optimization.drawio  business-use-cases.drawio  development-view.drawio  frontend-components.drawio  frontend-network.drawio  logical-view.drawio  physical-view.drawio  process-view.drawio  system-use-cases.drawio
frontend/: .env.development  .env.production  Dockerfile.dev  Dockerfile.prod  README.md  eslint.config.js  index.html  nginx.local.conf  nginx.prod.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json
(+66 files in other folders)
